--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
 	"homepage": "https://github.com/AranBeitia/NODE-upTask#readme",
 	"dependencies": {
 		"express": "^4.17.1",
-		"pug": "^3.0.2"
+		"express-validator": "^6.13.0",
+		"mysql2": "^2.3.3",
+		"pug": "^3.0.2",
+		"sequelize": "^6.12.0-alpha.1",
+		"slug": "^5.1.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
