--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"mysql2": "^2.3.3",
 		"pug": "^3.0.2",
 		"sequelize": "^6.12.0-alpha.1",
+		"shortid": "^2.2.16",
 		"slug": "^5.1.0"
 	},
 	"devDependencies": {
