--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Proyecto UpTask con Node y MVC",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon ./index.js"
+		"dev": "nodemon ./index.js",
+		"start": "concurrently \"npm run dev\" \"npm run watch\" ",
+		"watch": "webpack -w --mode development"
 	},
 	"repository": {
 		"type": "git",
@@ -17,15 +19,23 @@
 	},
 	"homepage": "https://github.com/AranBeitia/NODE-upTask#readme",
 	"dependencies": {
+		"axios": "^0.24.0",
+		"concurrently": "^6.4.0",
 		"express": "^4.17.1",
 		"express-validator": "^6.13.0",
 		"mysql2": "^2.3.3",
 		"pug": "^3.0.2",
 		"sequelize": "^6.12.0-alpha.1",
 		"shortid": "^2.2.16",
-		"slug": "^5.1.0"
+		"slug": "^5.1.0",
+		"sweetalert2": "^11.2.2"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.15"
+		"@babel/core": "^7.16.0",
+		"@babel/preset-env": "^7.16.4",
+		"babel-loader": "^8.2.3",
+		"nodemon": "^2.0.15",
+		"webpack": "^5.64.4",
+		"webpack-cli": "^4.9.1"
 	}
 }
