--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	"homepage": "https://github.com/AranBeitia/NODEJS-upTask#readme",
 	"dependencies": {
 		"axios": "^0.24.0",
+		"bcrypt-nodejs": "^0.0.3",
 		"concurrently": "^6.4.0",
+		"connect-flash": "^0.1.1",
 		"express": "^4.17.1",
 		"express-validator": "^6.13.0",
 		"mysql2": "^2.3.3",
